# Coquille

./: .gitignore  .pre-commit-config.yaml  FUNDING.yml  README.md  pyproject.toml  setup.py
examples/coquille_context/: __main__.py
examples/coquille_print/: __main__.py  output.txt
examples/coquille_write/: __main__.py
examples/write/: __main__.py
src/coquille/: __init__.py  coquille.py  prelude.py  prelude.pyi  sequences.py  sequences.pyi  typeshed.py  typeshed.pyi
tests/: coquille_test.py  sequences_test.py
