[project]
name = "Coquille"
version = "1.3.0"
authors = [{ name = "Qexat" }]
description = "Coquille is a library that wraps terminal escape sequences as convenient functions."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["terminal", "escape sequences"]

[project.urls]
homepage = "https://github.com/qexat/Coquille"
repository = "https://github.com/qexat/Coquille"

[project.optional-dependencies]
dev = ["pytest", "coverage", "build", "twine"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
